src.new/python/pysuv/srcn/src/uv.pxd


    cdef int uv_queue_work(uv_loop_t* loop,
                                uv_work_t* req,
                                uv_work_cb work_cb,
                                uv_after_work_cb after_work_cb)    

    cdef int uv_cancel(uv_req_t* req)    


    cdef struct uv_cpu_times_s:
      uint64_t user     """/* milliseconds */"""
      uint64_t nice     """/* milliseconds */"""
      uint64_t sys     """/* milliseconds */"""
      uint64_t idle     """/* milliseconds */"""
      uint64_t irq     """/* milliseconds */"""

    cdef struct uv_cpu_info_s :
      char* model    
      int speed    
      struct uv_cpu_times_s cpu_times    

    cdef struct uv_interface_address_s :
      char* name    
      char phys_addr[6]    
      int is_internal    
      union address:
        struct sockaddr_in address4    
        struct sockaddr_in6 address6      
      union netmask:
        struct sockaddr_in netmask4    
        struct sockaddr_in6 netmask6     

    cdef struct uv_passwd_s :
      char* username    
      unsigned long uid    
      unsigned long gid    
      char* shell    
      char* homedir    

    cdef struct uv_group_s :
      char* groupname    
      unsigned long gid    
      char** members    

    cdef struct uv_utsname_s :
      char sysname[256]    
      char release[256]    
      char version[256]    
      char machine[256]    
      """/* This struct does not contain the nodename and domainname fields present in
        the utsname type. domainname is a GNU extension. Both fields are referred
        to as meaningless in the docs. */"""  

    cdef struct uv_statfs_s :
      uint64_t f_type    
      uint64_t f_bsize    
      uint64_t f_blocks    
      uint64_t f_bfree    
      uint64_t f_bavail    
      uint64_t f_files    
      uint64_t f_ffree    
      uint64_t f_spare[4]    

    ctypedef enum uv_dirent_type_t:
      UV_DIRENT_UNKNOWN,
      UV_DIRENT_FILE,
      UV_DIRENT_DIR,
      UV_DIRENT_LINK,
      UV_DIRENT_FIFO,
      UV_DIRENT_SOCKET,
      UV_DIRENT_CHAR,
      UV_DIRENT_BLOCK 

    cdef struct uv_dirent_s :
      const char* name    
      uv_dirent_type_t type    

    cdef char** uv_setup_args(int argc, char** argv)    
    cdef int uv_get_process_title(char* buffer, size_t size)    
    cdef int uv_set_process_title(const char* title)    
    cdef int uv_resident_set_memory(size_t* rss)    
    cdef int uv_uptime(double* uptime)    
    cdef uv_os_fd_t uv_get_osfhandle(int fd)    
    cdef int uv_open_osfhandle(uv_os_fd_t os_fd)    

    ctypedef struct uv_rusage_t:
      uv_timeval_t ru_utime     """/* user CPU time used */"""
      uv_timeval_t ru_stime     """/* system CPU time used */"""
      uint64_t ru_maxrss        """/* maximum resident set size */"""
      uint64_t ru_ixrss         """/* integral shared memory size */"""
      uint64_t ru_idrss         """/* integral unshared data size */"""
      uint64_t ru_isrss         """/* integral unshared stack size */"""
      uint64_t ru_minflt        """/* page reclaims (soft page faults) */"""
      uint64_t ru_majflt        """/* page faults (hard page faults) */"""
      uint64_t ru_nswap         """/* swaps */"""
      uint64_t ru_inblock       """/* block input operations */"""
      uint64_t ru_oublock       """/* block output operations */"""
      uint64_t ru_msgsnd        """/* IPC messages sent */"""
      uint64_t ru_msgrcv        """/* IPC messages received */"""
      uint64_t ru_nsignals      """/* signals received */"""
      uint64_t ru_nvcsw         """/* voluntary context switches */"""
      uint64_t ru_nivcsw        """/* involuntary context switches */"""

    cdef int uv_getrusage(uv_rusage_t* rusage)    

    cdef int uv_os_homedir(char* buffer, size_t* size)    
    cdef int uv_os_tmpdir(char* buffer, size_t* size)    
    cdef int uv_os_get_passwd(uv_passwd_t* pwd)    
    cdef void uv_os_free_passwd(uv_passwd_t* pwd)    
    cdef int uv_os_get_passwd2(uv_passwd_t* pwd, uv_uid_t uid)    
    cdef int uv_os_get_group(uv_group_t* grp, uv_uid_t gid)    
    cdef void uv_os_free_group(uv_group_t* grp)    
    cdef uv_pid_t uv_os_getpid(void)    
    cdef uv_pid_t uv_os_getppid(void)    

    """
    #if defined(__PASE__)
    /* On IBM i PASE, the highest process priority is -10 */
    # define UV_PRIORITY_LOW 39          /* RUNPTY(99) */
    # define UV_PRIORITY_BELOW_NORMAL 15 /* RUNPTY(50) */
    # define UV_PRIORITY_NORMAL 0        /* RUNPTY(20) */
    # define UV_PRIORITY_ABOVE_NORMAL -4 /* RUNTY(12) */
    # define UV_PRIORITY_HIGH -7         /* RUNPTY(6) */
    # define UV_PRIORITY_HIGHEST -10     /* RUNPTY(1) */
    #else
    # define UV_PRIORITY_LOW 19
    # define UV_PRIORITY_BELOW_NORMAL 10
    # define UV_PRIORITY_NORMAL 0
    # define UV_PRIORITY_ABOVE_NORMAL -7
    # define UV_PRIORITY_HIGH -14
    # define UV_PRIORITY_HIGHEST -20
    #endif
    """

    cdef int uv_os_getpriority(uv_pid_t pid, int* priority)    
    cdef int uv_os_setpriority(uv_pid_t pid, int priority)    

    cdef unsigned int uv_available_parallelism(void)    
    cdef int uv_cpu_info(uv_cpu_info_t** cpu_infos, int* count)    
    cdef void uv_free_cpu_info(uv_cpu_info_t* cpu_infos, int count)    
    cdef int uv_cpumask_size(void)    

    cdef int uv_interface_addresses(uv_interface_address_t** addresses,
                                        int* count)    
    cdef void uv_free_interface_addresses(uv_interface_address_t* addresses,
                                              int count)    

    cdef struct uv_env_item_s :
      char* name    
      char* value    

    cdef int uv_os_environ(uv_env_item_t** envitems, int* count)    
    cdef void uv_os_free_environ(uv_env_item_t* envitems, int count)    
    cdef int uv_os_getenv(const char* name, char* buffer, size_t* size)    
    cdef int uv_os_setenv(const char* name, const char* value)    
    cdef int uv_os_unsetenv(const char* name)    

    """
    #ifdef MAXHOSTNAMELEN
    # define UV_MAXHOSTNAMESIZE (MAXHOSTNAMELEN + 1)
    #else
      /*
        Fallback for the maximum hostname size, including the null terminator. The
        Windows gethostname() documentation states that 256 bytes will always be
        large enough to hold the null-terminated hostname.
      */
    # define UV_MAXHOSTNAMESIZE 256
    #endif
    """

    cdef int uv_os_gethostname(char* buffer, size_t* size)    

    cdef int uv_os_uname(uv_utsname_t* buffer)    

    cdef struct uv_metrics_s :
      uint64_t loop_count    
      uint64_t events    
      uint64_t events_waiting    
      """/* private */"""
      uint64_t* reserved[13]

    cdef int uv_metrics_info(uv_loop_t* loop, uv_metrics_t* metrics)    
    cdef uint64_t uv_metrics_idle_time(uv_loop_t* loop)    

    cdef typedef enum uv_fs_type:
      UV_FS_UNKNOWN = -1,
      UV_FS_CUSTOM,
      UV_FS_OPEN,
      UV_FS_CLOSE,
      UV_FS_READ,
      UV_FS_WRITE,
      UV_FS_SENDFILE,
      UV_FS_STAT,
      UV_FS_LSTAT,
      UV_FS_FSTAT,
      UV_FS_FTRUNCATE,
      UV_FS_UTIME,
      UV_FS_FUTIME,
      UV_FS_ACCESS,
      UV_FS_CHMOD,
      UV_FS_FCHMOD,
      UV_FS_FSYNC,
      UV_FS_FDATASYNC,
      UV_FS_UNLINK,
      UV_FS_RMDIR,
      UV_FS_MKDIR,
      UV_FS_MKDTEMP,
      UV_FS_RENAME,
      UV_FS_SCANDIR,
      UV_FS_LINK,
      UV_FS_SYMLINK,
      UV_FS_READLINK,
      UV_FS_CHOWN,
      UV_FS_FCHOWN,
      UV_FS_REALPATH,
      UV_FS_COPYFILE,
      UV_FS_LCHOWN,
      UV_FS_OPENDIR,
      UV_FS_READDIR,
      UV_FS_CLOSEDIR,
      UV_FS_STATFS,
      UV_FS_MKSTEMP,
      UV_FS_LUTIME

    """struct uv_dir_s {
      uv_dirent_t* dirents    
      size_t nentries    
      void* reserved[4]    
      UV_DIR_PRIVATE_FIELDS
    }  """  

    """/* uv_fs_t is a subclass of uv_req_t. */
    struct uv_fs_s {
      UV_REQ_FIELDS
      uv_fs_type fs_type    
      uv_loop_t* loop    
      uv_fs_cb cb    
      ssize_t result    
      void* ptr    
      const char* path    
      uv_stat_t statbuf      /* Stores the result of uv_fs_stat() and uv_fs_fstat(). */
      UV_FS_PRIVATE_FIELDS
    }    """

    cdef uv_fs_type uv_fs_get_type(const uv_fs_t*)    
    cdef ssize_t uv_fs_get_result(const uv_fs_t*)    
    cdef int uv_fs_get_system_error(const uv_fs_t*)    
    cdef void* uv_fs_get_ptr(const uv_fs_t*)    
    cdef const char* uv_fs_get_path(const uv_fs_t*)    
    cdef uv_stat_t* uv_fs_get_statbuf(uv_fs_t*)    

    cdef void uv_fs_req_cleanup(uv_fs_t* req)    
    cdef int uv_fs_close(uv_loop_t* loop,
                              uv_fs_t* req,
                              uv_file file,
                              uv_fs_cb cb)    
    cdef int uv_fs_open(uv_loop_t* loop,
                            uv_fs_t* req,
                            const char* path,
                            int flags,
                            int mode,
                            uv_fs_cb cb)    
    cdef int uv_fs_read(uv_loop_t* loop,
                            uv_fs_t* req,
                            uv_file file,
                            const uv_buf_t bufs[],
                            unsigned int nbufs,
                            int64_t offset,
                            uv_fs_cb cb)    
    cdef int uv_fs_unlink(uv_loop_t* loop,
                              uv_fs_t* req,
                              const char* path,
                              uv_fs_cb cb)    
    cdef int uv_fs_write(uv_loop_t* loop,
                              uv_fs_t* req,
                              uv_file file,
                              const uv_buf_t bufs[],
                              unsigned int nbufs,
                              int64_t offset,
                              uv_fs_cb cb)    
    """/*
    * This flag can be used with uv_fs_copyfile() to return an error if the
    * destination already exists.
    */
    #define UV_FS_COPYFILE_EXCL   0x0001

    /*
    * This flag can be used with uv_fs_copyfile() to attempt to create a reflink.
    * If copy-on-write is not supported, a fallback copy mechanism is used.
    */
    #define UV_FS_COPYFILE_FICLONE 0x0002

    /*
    * This flag can be used with uv_fs_copyfile() to attempt to create a reflink.
    * If copy-on-write is not supported, an error is returned.
    */
    #define UV_FS_COPYFILE_FICLONE_FORCE 0x0004"""
